@@ -1,21 +1,28 @@
-# example-gradle-java-14
+# gradle-playground
 
-Example Gradle project showcasing Java 14 support and the new _Records_ language feature.
+Learning and exploring Gradle (the #1/#2 most popular Java build tool).
+
+> From mobile apps to microservices, from small startups to big enterprises, Gradle helps teams build, automate and
+> deliver better software, faster.
+> -- <cite>https://gradle.org</cite>
+
 
 ### Description
 
-Is it Q1/Q2 2020 and you want to upgrade your Gradle project to Java 14 and use the new _Records_ language feature? If 
-yes, here is an example Gradle project with Java 14 with preview features enabled.
+This repo is a working example of a Gradle project configured to support the latest version of Java (or at least, the
+latest version of Java at the time of writing!). Why is this useful? Gradle can be complex to configure correctly
+because it is a powerful DSL with a rich set of features and plugins. It's hard to remember the exact incantations to
+write in a `build.gradle` (or `build.gradle.kts` for that matter) to configure, for example, Java language preview
+features or JUnit test logging.
 
-With the release of Gradle 6.3-rc-1 it is now easy to use Java 14 with Gradle because this version of Gradle added 
-support for Java 14. See the release notes: <https://docs.gradle.org/6.3-rc-1/release-notes.html#support-for-java-14>.
+This repo in particular showcases the new Java 15 _Records_ language feature which is a preview feature hidden behind
+the `--enable-preview` Java flag.
 
-You might also want to use Intellij IDEA 2020.1 EAP or later because 2020.1 EAP is the first release of Intellij to also
-support Java 14. See the release notes: <https://blog.jetbrains.com/idea/2020/01/intellij-idea-2020-1-eap/>.
+You will need to use [Intellij IDEA 2020.2 or later to get Java 15 support](https://blog.jetbrains.com/idea/2020/09/java-15-and-intellij-idea/).
 
 ### Instructions
 
-* Use Java 14
+* Use Java 15
 * Build and run the application with `./gradlew run`. It should output the following:
     ```
     > Task :compileJava
